--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,46 @@
+# ────────────────────────────────────────────────────────────────
+# Required Bot Configuration
+# ────────────────────────────────────────────────────────────────
+
 DISCORD_TOKEN=YOUR_BOTS_TOKEN
-DISCORD_WEBHOOK_CHANNEL_ID=your_channel_id_here
-DISCORD_DEV_ROLE_ID=your_role_id_here
+# The bot token for authenticating with the Discord API.
+
 PROJECT_NAME=fitchfork-discord-bot
+# Optional identifier for your bot's deployment (used internally or for logging).
+
 HOST=127.0.0.1
 PORT=8080
+# The address and port the Axum web server should bind to.
+
+# ────────────────────────────────────────────────────────────────
+# Discord Channel Configuration
+# ────────────────────────────────────────────────────────────────
+
+DISCORD_WEBHOOK_CHANNEL_ID=your_channel_id_here
+# (Legacy/fallback) ID of the general channel to post GitHub event notifications.
+
+DISCORD_PR_CHANNEL_ID=123456789012345678
+# Channel ID where **pull request events** (e.g., "opened", "synchronized", "closed") will be sent.
+
+DISCORD_REVIEW_CHANNEL_ID=345678901234567890
+# Channel ID where **review requests** (e.g., "review_requested") will be sent.
+
+DISCORD_WORKFLOW_CHANNEL_ID=234567890123456789
+# Channel ID where **GitHub Actions workflow run** events will be sent.
+
+DISCORD_DEV_ROLE_ID=your_role_id_here
+# Discord Role ID to @mention in PR notifications (e.g., for devs or reviewers).
+
+# ────────────────────────────────────────────────────────────────
+# GitHub User-to-Discord Mention Mapping
+# ────────────────────────────────────────────────────────────────
+
+# These map GitHub usernames to Discord user mentions.
+# Used when someone is requested for a review in a pull request.
+# Format: GITHUB_NOTIFY_<GitHubUsername>=<@DiscordUserID>
+
+GITHUB_NOTIFY_jacqu3sk=<@123456789012345678>
+GITHUB_NOTIFY_ReeceJordaan=<@234567890123456789>
+GITHUB_NOTIFY_CartographySilence=<@345678901234567890>
+GITHUB_NOTIFY_RaiderRoss=<@456789012345678901>
+GITHUB_NOTIFY_RKruse42=<@567890123456789012>
