added status loop functionality

--- a/.env.example
+++ b/.env.example
@@ -28,8 +28,19 @@ DISCORD_REVIEW_CHANNEL_ID=345678901234567890
 DISCORD_WORKFLOW_CHANNEL_ID=234567890123456789
 # Channel ID where **GitHub Actions workflow run** events will be sent.
 
+DISCORD_STATUS_CHANNEL_ID=456789012345678901
+# Channel ID where **server status updates** will be periodically posted (auto-cleared before each new post).
+
 DISCORD_DEV_ROLE_ID=your_role_id_here
 # Discord Role ID to @mention in PR notifications (e.g., for devs or reviewers).
+
+# ────────────────────────────────────────────────────────────────
+# Status Update Configuration
+# ────────────────────────────────────────────────────────────────
+
+STATUS_UPDATE_INTERVAL_SECS=300
+# How often to send server status updates to DISCORD_STATUS_CHANNEL_ID (in seconds).
+# Recommended: 300 (5 min), 600 (10 min), etc.
 
 # ────────────────────────────────────────────────────────────────
 # GitHub User-to-Discord Mention Mapping
